src/styles/global.css
@import "tailwindcss";
@import "./typography.css" layer(components);
@import "./heading-links.css";
@variant dark (&:where(.dark, .dark *));

:root ::-webkit-scrollbar {
  width: 8px;
  background-color: transparent;
}

:root ::-webkit-scrollbar-thumb {
  background-color: #a0a0a0;
  cursor: pointer;
}

.dark ::-webkit-scrollbar-thumb {
  background-color: #505050;
}

* {
  scrollbar-width: thin;
  scrollbar-color: #a0a0a0 transparent;
}

.dark * {
  scrollbar-color: #505050 transparent;
}

:root {
  color-scheme: light dark;
}
.dark {
  color-scheme: dark;
}
.light {
  color-scheme: light;
}

html {
  font-size: 108%;
  transition:
    background-color 0.2s ease,
    color 0.2s ease;
  font-family: "Cambria", "Georgia", serif;
}
* {
  transition:
    background-color 0.2s ease,
    border-color 0.2s ease,
    color 0.2s ease,
    fill 0.2s ease,
    stroke 0.2s ease;
  font-family: inherit;
}

@variant dark {
  &:where(.dark, .dark *) {
    @slot;
  }
  @media (prefers-color-scheme: dark) {
    &:where(.system, .system *) {
      @slot;
    }
  }
}

@theme {
  --color-bg: var(--color-neutral-50);
  --color-link: oklch(46.97% 0.2734 267.56);
  --color-muted-text: var(--color-neutral-700);

  --color-dark-bg: var(--color-neutral-950);
  --color-dark-link: oklch(73.9% 0.1387 282.47);
  --color-dark-muted-text: var(--color-neutral-300);
}

.link {
  --prose-link-color: var(--color-link);
  --prose-link-underline-color: currentColor;

  color: var(--prose-link-color);
  font-weight: var(--font-weight-semibold);
  text-decoration: none;
  & code {
    font-weight: var(--font-weight-semibold);
  }
  &:hover {
    text-decoration: underline;
    text-underline-offset: 3px;
    text-decoration-color: currentColor;
    text-decoration-thickness: 1px;
  }
}

.dark .link {
  --prose-link-color: var(--color-dark-link);
  --prose-link-underline-color: currentColor;
}

.nav-link {
  color: var(--prose-color);
  text-decoration: none;
  font-weight: var(--font-weight-medium);
}

.nav-link:hover {
  text-decoration: underline;
  text-underline-offset: 3px;
  text-decoration-color: currentColor;
  text-decoration-thickness: 1px;
}

.dark .nav-link {
  color: var(--color-white);
}

.social-link {
  color: var(--prose-color);
  text-decoration: none;
  opacity: 0.8;
}

.social-link:hover {
  text-decoration: underline;
  text-underline-offset: 3px;
  text-decoration-color: currentColor;
  text-decoration-thickness: 1px;
}

.dark .social-link {
  color: var(--color-neutral-300);
  opacity: 1;
}

.pager-link-1 {
  color: var(--prose-color);
  text-decoration: none;
  opacity: 0.8;
}

.pager-link-1:hover {
  text-decoration: underline;
  text-underline-offset: 3px;
  text-decoration-color: currentColor;
  text-decoration-thickness: 1px;
}

.dark .pager-link-1 {
  color: var(--color-neutral-300);
  opacity: 1;
}

.pager-link-2 {
  color: var(--prose-color);
  text-decoration: none;
  opacity: 0.8;
}

.dark .pager-link-2 {
  color: var(--color-neutral-300);
  opacity: 1;
}

.prose a:hover {
  text-decoration: underline !important;
  text-underline-offset: 3px !important;
  text-decoration-color: currentColor !important;
  text-decoration-thickness: 1px !important;
}

.shiki,
.shiki span {
  color: var(--shiki-light) !important;
  background-color: var(--shiki-light-bg) !important;
  font-style: var(--shiki-light-font-style) !important;
  font-weight: var(--shiki-light-font-weight) !important;
  text-decoration: var(--shiki-light-text-decoration) !important;
}

.dark .shiki,
.dark .shiki span {
  color: var(--shiki-dark) !important;
  background-color: var(--shiki-dark-bg) !important;
  font-style: var(--shiki-dark-font-style) !important;
  font-weight: var(--shiki-dark-font-weight) !important;
  text-decoration: var(--shiki-dark-text-decoration) !important;
}

.code-block-wrapper {
  position: relative;
}

.copy-code-button {
  position: absolute;
  margin-right: 0.3rem;
  top: 0;
  right: 0;
  z-index: 10;
  color: white;
  cursor: pointer;
  font-size: 0.75rem;
  font-weight: 500;
}

.copy-code-button:hover {
  text-decoration: underline;
}

